[package]
name = "find_dupes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# clap version 3 requires 'edition2021'.
clap = "2.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
